--- a/assets/index.html
+++ b/assets/index.html
@@ -15,6 +15,13 @@
 
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/style.min.css">
+
+<script type="text/javascript" async defer> //<![CDATA[
+var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
+document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+//]]>
+</script>
+
 </head>
 
 <body class="theme-blush">
@@ -180,7 +187,7 @@
                                     <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100" style="width: 86%;">
                                         <span class="progress-value">86%</span>
                                     </div>
-                                </div>                        
+                                </div>
                                 <ul class="list-unstyled team-info">
                                     <li class="m-r-15"><small>Team</small></li>
                                     <li>
@@ -191,7 +198,7 @@
                                     </li>
                                     <li>
                                         <img src="assets/images/xs/avatar4.jpg" alt="Avatar">
-                                    </li>                            
+                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -241,7 +248,7 @@
                                     </li>
                                     <li>
                                         <img src="assets/images/xs/avatar7.jpg" alt="Avatar">
-                                    </li>                            
+                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -270,7 +277,7 @@
                     <a class="image" href="profile.html"><img src="assets/images/profile_av.jpg" alt="User"></a>
                     <div class="detail">
                         <h4>Michael</h4>
-                        <small>Super Admin</small>                        
+                        <small>Super Admin</small>
                     </div>
                 </div>
             </li>
@@ -280,7 +287,7 @@
                     <li><a href="mail-inbox.html">Email</a></li>
                     <li><a href="chat.html">Chat Apps</a></li>
                     <li><a href="events.html">Calendar</a></li>
-                    <li><a href="contact.html">Contact</a></li>                    
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </li>
             <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Projects</span></a>
@@ -318,15 +325,15 @@
             </li>
             <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-swap-alt"></i><span>Components</span></a>
                 <ul class="ml-menu">
-                    <li><a href="ui_kit.html">Aero UI KIT</a></li>                    
-                    <li><a href="alerts.html">Alerts</a></li>                    
+                    <li><a href="ui_kit.html">Aero UI KIT</a></li>
+                    <li><a href="alerts.html">Alerts</a></li>
                     <li><a href="collapse.html">Collapse</a></li>
                     <li><a href="colors.html">Colors</a></li>
-                    <li><a href="dialogs.html">Dialogs</a></li>                    
+                    <li><a href="dialogs.html">Dialogs</a></li>
                     <li><a href="list-group.html">List Group</a></li>
                     <li><a href="media-object.html">Media Object</a></li>
                     <li><a href="modals.html">Modals</a></li>
-                    <li><a href="notifications.html">Notifications</a></li>                    
+                    <li><a href="notifications.html">Notifications</a></li>
                     <li><a href="progressbars.html">Progress Bars</a></li>
                     <li><a href="range-sliders.html">Range Sliders</a></li>
                     <li><a href="sortable-nestable.html">Sortable & Nestable</a></li>
@@ -361,7 +368,7 @@
                     <li><a href="footable.html">Foo Tables</a></li>
                     <li><a href="table-color.html">Tables Color</a></li>
                 </ul>
-            </li>            
+            </li>
             <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-chart"></i><span>Charts</span></a>
                 <ul class="ml-menu">
                     <li><a href="c3.html">C3 Chart</a></li>
@@ -371,7 +378,7 @@
                     <li><a href="sparkline.html">Sparkline</a></li>
                     <li><a href="jquery-knob.html">Jquery Knob</a></li>
                 </ul>
-            </li>            
+            </li>
             <li><a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-delicious"></i><span>Widgets</span></a>
                 <ul class="ml-menu">
                     <li><a href="widgets-app.html">Apps Widgets</a></li>
@@ -461,7 +468,7 @@
                         <li data-theme="green"><div class="green"></div></li>
                         <li data-theme="orange"><div class="orange"></div></li>
                         <li data-theme="blush" class="active"><div class="blush"></div></li>
-                    </ul>                                        
+                    </ul>
                 </div>
                 <div class="card">
                     <h6>General Settings</h6>
@@ -482,7 +489,7 @@
                             <div class="checkbox">
                                 <input id="checkbox3" type="checkbox" checked="">
                                 <label for="checkbox3">Notifications</label>
-                            </div>                        
+                            </div>
                         </li>
                         <li>
                             <div class="checkbox">
@@ -503,9 +510,9 @@
                             </div>
                         </li>
                     </ul>
-                </div>                
-            </div>                
-        </div>       
+                </div>
+            </div>
+        </div>
         <div class="tab-pane right_chat" id="chat">
             <div class="slim_scroll">
                 <div class="card">
@@ -520,7 +527,7 @@
                                         <span class="badge badge-outline status"></span>
                                     </div>
                                 </div>
-                            </a>                            
+                            </a>
                         </li>
                         <li class="online">
                             <a href="javascript:void(0);">
@@ -532,7 +539,7 @@
                                         <span class="badge badge-outline status"></span>
                                     </div>
                                 </div>
-                            </a>                            
+                            </a>
                         </li>
                         <li class="offline">
                             <a href="javascript:void(0);">
@@ -544,7 +551,7 @@
                                         <span class="badge badge-outline status"></span>
                                     </div>
                                 </div>
-                            </a>                            
+                            </a>
                         </li>
                         <li class="me">
                             <a href="javascript:void(0);">
@@ -556,7 +563,7 @@
                                         <span class="badge badge-outline status"></span>
                                     </div>
                                 </div>
-                            </a>                            
+                            </a>
                         </li>
                         <li class="online">
                             <a href="javascript:void(0);">
@@ -568,8 +575,8 @@
                                         <span class="badge badge-outline status"></span>
                                     </div>
                                 </div>
-                            </a>                            
-                        </li>                        
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -590,7 +597,7 @@
                 </ul>
                 <button class="btn btn-primary btn-icon mobile_menu" type="button"><i class="zmdi zmdi-sort-amount-desc"></i></button>
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-12">                
+            <div class="col-lg-5 col-md-6 col-sm-12">
                 <button class="btn btn-primary btn-icon float-right right_icon_toggle_btn" type="button"><i class="zmdi zmdi-arrow-right"></i></button>
             </div>
         </div>
@@ -680,7 +687,7 @@
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="state_w1 mb-1 mt-1">
                                     <div class="d-flex justify-content-between">
-                                        <div>                                
+                                        <div>
                                             <h5>365</h5>
                                             <span><i class="zmdi zmdi-turning-sign"></i> Returns</span>
                                         </div>
@@ -702,7 +709,7 @@
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="state_w1 mb-1 mt-1">
                                     <div class="d-flex justify-content-between">
-                                        <div>                            
+                                        <div>
                                             <h5>2,055</h5>
                                             <span><i class="zmdi zmdi-print"></i> Invoices</span>
                                         </div>
@@ -746,7 +753,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>                
+            </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="card w_data_1">
                     <div class="body">
@@ -822,7 +829,7 @@
                             </ul>
                         </div>
                         <div class="input-group mt-3">
-                            <div class="input-group-prepend">                                    
+                            <div class="input-group-prepend">
                                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add</button>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="javascript:void(0);">Tim Hank</a>
@@ -855,10 +862,10 @@
                             <li class="remove">
                                 <a role="button" class="boxs-close"><i class="zmdi zmdi-close"></i></a>
                             </li>
-                        </ul>                        
+                        </ul>
                     </div>
                     <div class="body">
-                        <div id="world-map-markers" class="jvector-map"></div>                            
+                        <div id="world-map-markers" class="jvector-map"></div>
                     </div>
                 </div>
             </div>
@@ -881,7 +888,7 @@
                     </div>
                     <div class="body text-center">
                         <div id="chart-pie" class="c3_chart d_distribution"></div>
-                        <button class="btn btn-primary mt-4 mb-4">View More</button>                            
+                        <button class="btn btn-primary mt-4 mb-4">View More</button>
                     </div>
                 </div>
             </div>
@@ -914,7 +921,7 @@
                                 <div class="progress mt-4">
                                     <div class="progress-bar l-amber" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;"></div>
                                 </div>
-                                <div class="d-flex bd-highlight mt-4">                                
+                                <div class="d-flex bd-highlight mt-4">
                                     <div class="flex-fill bd-highlight">
                                         <h5 class="mb-0">21,521 <i class="zmdi zmdi-long-arrow-up"></i></h5>
                                         <small>Today</small>
@@ -924,7 +931,7 @@
                                         <small>Last month %</small>
                                     </div>
                                 </div>
-                            </div>                                
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -934,8 +941,8 @@
 </section>
 
 
-<!-- Jquery Core Js --> 
-<script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) --> 
+<!-- Jquery Core Js -->
+<script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
 <script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
 
 <script src="assets/bundles/jvectormap.bundle.js"></script> <!-- JVectorMap Plugin Js -->
@@ -944,5 +951,10 @@
 
 <script src="assets/bundles/mainscripts.bundle.js"></script>
 <script src="assets/js/pages/index.js"></script>
+
+<script language="JavaScript" type="text/javascript" async defer>
+  TrustLogo("/certs/positivessl_trust_seal_md_167x42.png", "CL1", "none");
+</script>
+<a href="https://www.positivessl.com/" id="comodoTL">Positive SSL</a>
 </body>
 </html>
