--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!doctype html>
 <html class="no-js " lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
-  <title>:: Aero Bootstrap4 Admin :: Home</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
-  <link rel="stylesheet" href="assets/plugins/charts-c3/plugin.css"/>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+<meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
+<title>:: Chain Media :: Home</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
+<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
+<link rel="stylesheet" href="assets/plugins/charts-c3/plugin.css"/>
 
-  <link rel="stylesheet" href="assets/plugins/morrisjs/morris.min.css" />
-  <!-- Custom Css -->
-  <link rel="stylesheet" href="assets/css/style.min.css">
-  <style>
-    html, body { font-family: 'Rajdhani', "Helvetica Neue", Helvetica, Arial, Roboto, sans-serif;
-      -webkit-font-smoothing: antialiased; }
-    #leftsidebar { width: 200px; }
-    section.content { margin-left: 210px; }
-    .media-wrapper-parent { padding-right: 10px;padding-left: 10px; }
-    .media-wrapper .col { min-width: 170px;padding-right: 5px;padding-left: 5px; }
-    .media-wrapper .col .card.w_data_1 { margin-bottom: 10px;box-shadow: 1px 1px 4px #aaaaaa; }
-    .media-wrapper .col .card .body { padding: 10px 13px;min-height: 110px; }
-    .media-wrapper .col .card .body > div { height: 46px;background-position-y: center;
-      background-position-x: center;background-repeat: no-repeat;margin: 0 -13px;background-size: 150px;
-    background-color: white; }
-    .media-wrapper .col .card .body > div.dark { background-color: black; }
-    .media-wrapper .col .card .body a { font-size: 12px; }
-  </style>
+<link rel="stylesheet" href="assets/plugins/morrisjs/morris.min.css" />
+<!-- Custom Css -->
+<link rel="stylesheet" href="assets/css/style.min.css">
+<style>
+  html, body {
+    font-family: "Nexon Gothic R", apple-system, BlinkMacSystemFont, "Segoe UI", 'Raleway', 'Noto Sans KR', "Comfortaa", 'Rajdhani', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, "Malgun Gothic";
+    -webkit-font-smoothing: antialiased; }
+  #leftsidebar { width: 160px; }
+  section.content { margin-left: 210px; }
+  .media-wrapper-parent { padding-right: 10px;padding-left: 10px; }
+  .media-wrapper .col { min-width: 140px;padding-right: 3px;padding-left: 3px; }
+  .media-wrapper .col .card.w_data_1 { margin-bottom: 6px;box-shadow: 1px 1px 4px #aaaaaa; }
+  .media-wrapper .col .card .body { padding: 0.35rem 13px;min-height: 100px; }
+  .media-wrapper .col .card .body > div { height: 46px;background-position-y: center;
+    background-position-x: center;background-repeat: no-repeat;margin: 0 -13px;
+    background-size: 120px;background-color: white; }
+  .media-wrapper .col .card .body > div.dark { background-color: black; }
+  .media-wrapper .col .card .body a { font-size: 12px; }
+  section.content { margin-right: 10px; }
+</style>
 </head>
 
 <body class="theme-blush">
