--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
   .media-wrapper .col .card .body a { font-size: 12px; }
   section.content { margin-right: 10px; }
 </style>
+
+<script type="text/javascript" async defer>
+//<![CDATA[
+  var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
+  document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+//]]>
+</script>
 </head>
 
 <body class="theme-blush">
