--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 
 <div id="app"></div>
 
+<nav id="topnavbar">
+  <div class="navbar-brand">
+    © Kittychain Inc. All rights reserved.&nbsp;
+    <script language="JavaScript" type="text/javascript" async defer>
+      TrustLogo("/assets/certs/positivessl_trust_seal_md_167x42.png", "CL1", "none");
+    </script>
+  </div>
+</nav>
+
 <!-- Jquery Core Js -->
 <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
 <script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
