--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
+<meta name="google-site-verification" content="NeNpfpRApqGVCOlwSA8khQjvOss9XUtk64emALftQRE" />
 <title>:: Chain Media :: Home</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
@@ -30,6 +31,7 @@
   .media-wrapper .col .card .body > div.dark { background-color: black; }
   .media-wrapper .col .card .body a { font-size: 12px; }
   section.content { margin-right: 10px; }
+  .navbar-brand { font-size: 14px; }
 </style>
 
 <script type="text/javascript" async defer>
@@ -63,5 +65,15 @@
 
 <script src="assets/bundles/mainscripts.bundle.js"></script>
 <script src="assets/js/pages/index.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46283958-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-46283958-4');
+</script>
+
 </body>
 </html>
