--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
 <meta name="google-site-verification" content="NeNpfpRApqGVCOlwSA8khQjvOss9XUtk64emALftQRE" />
-<title>4th Life > Home</title>
+<title>:: Chain Media :: Home</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
 <link rel="stylesheet" href="assets/plugins/charts-c3/plugin.css"/>
+
 <link rel="stylesheet" href="assets/plugins/morrisjs/morris.min.css" />
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/style.min.css">
@@ -31,7 +32,6 @@
   .media-wrapper .col .card .body a { font-size: 12px; }
   section.content { margin-right: 10px; }
   .navbar-brand { font-size: 14px; }
-  .sidebar .menu .list { margin: 0px; }
 </style>
 
 <script type="text/javascript" async defer>
@@ -40,15 +40,6 @@
   document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
 //]]>
 </script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="//www.googletagmanager.com/gtag/js?id=UA-46283958-4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-46283958-4');
-</script>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body class="theme-blush">
@@ -74,6 +65,15 @@
 
 <script src="assets/bundles/mainscripts.bundle.js"></script>
 <script src="assets/js/pages/index.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46283958-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-46283958-4');
+</script>
 
 </body>
 </html>
