--- a/index.html
+++ b/index.html
@@ -19,20 +19,29 @@
   html, body {
     font-family: "Nexon Gothic R", apple-system, BlinkMacSystemFont, "Segoe UI", 'Raleway', 'Noto Sans KR', "Comfortaa", 'Rajdhani', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, "Malgun Gothic";
     -webkit-font-smoothing: antialiased; }
-  #leftsidebar { width: 160px; }
-  section.content { margin-left: 210px; }
+  a { color: #666; }
+  #leftsidebar { max-width: 160px; }
+  .sidebar .menu .list { margin: 0px; }
+  ul.list li:last-child { margin: 0 -10px; }
+  section.content { margin-left: 170px;margin-right: 10px; }
   .media-wrapper-parent { padding-right: 10px;padding-left: 10px; }
-  .media-wrapper .col { min-width: 140px;padding-right: 3px;padding-left: 3px; }
+  .media-wrapper .col { min-width: 120px;padding-right: 3px;padding-left: 3px; }
   .media-wrapper .col .card.w_data_1 { margin-bottom: 6px;box-shadow: 1px 1px 4px #aaaaaa; }
-  .media-wrapper .col .card .body { padding: 0.35rem 13px;min-height: 100px; }
+  .media-wrapper .col .card .body { padding: 0.35rem 13px;min-height: 82px; }
   .media-wrapper .col .card .body > div { height: 46px;background-position-y: center;
     background-position-x: center;background-repeat: no-repeat;margin: 0 -13px;
     background-size: 120px;background-color: white; }
   .media-wrapper .col .card .body > div.dark { background-color: black; }
-  .media-wrapper .col .card .body a { font-size: 12px; }
-  section.content { margin-right: 10px; }
-  .navbar-brand { font-size: 14px; }
-  .sidebar .menu .list { margin: 0px; }
+  .media-wrapper .col .card .body a { font-size: 12px;margin: 0 -13px; }
+  .navbar-brand {  }
+  .navbar-brand a { width: inherit;position: absolute;right: 0; }
+  .navbar-brand span { font-size: 13px;color: #aaa; }
+  .ellipse { white-space: nowrap;overflow: hidden;text-overflow: ellipsis; }
+  .table-hover td {
+    background-color: white;border-radius: 6px;border-top: 0; }    padding: 10px 10px;
+  #bottomnavbar { height: 200px;text-decoration: none;text-align: right;background-color: #333;
+    color: #aaa;padding: 10px 10px; }
+  .navbar-brand { border-bottom: 0;padding: 0; }
 </style>
 
 <script type="text/javascript" async defer>
@@ -50,15 +59,21 @@
   gtag('config', 'UA-46283958-4');
 </script>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7663265873201714",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 
 <body class="theme-blush">
 
 <div id="app"></div>
 
-<nav id="topnavbar">
+<nav id="bottomnavbar">
   <div class="navbar-brand">
-    © Kittychain Inc. All rights reserved.&nbsp;
+    <span>© Kittychain Inc. All rights reserved.</span>
     <script language="JavaScript" type="text/javascript" async defer>
       TrustLogo("/assets/certs/positivessl_trust_seal_md_167x42.png", "CL1", "none");
     </script>
