--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
     background-size: 120px;background-color: white; }
   .media-wrapper .col .card .body > div.dark { background-color: black; }
   .media-wrapper .col .card .body a { font-size: 12px;margin: 0 -13px; }
-  .navbar-brand {  }
-  .navbar-brand a { width: inherit;position: absolute;right: 0; }
   .navbar-brand span { font-size: 13px;color: #aaa; }
   .ellipse { white-space: nowrap;overflow: hidden;text-overflow: ellipsis; }
   .table-hover td {
     background-color: white;border-radius: 6px;border-top: 0; }    padding: 10px 10px;
   #bottomnavbar { height: 200px;text-decoration: none;text-align: right;background-color: #333;
     color: #aaa;padding: 10px 10px; }
+  #bottomnavbar a { width: inherit;position: absolute;right: 0; }
   .navbar-brand { border-bottom: 0;padding: 0; }
 </style>
 
