--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
 <meta name="google-site-verification" content="NeNpfpRApqGVCOlwSA8khQjvOss9XUtk64emALftQRE" />
-<title>4th Life > Home</title>
+<title>4th Life</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
@@ -20,9 +20,10 @@
     font-family: "Nexon Gothic R", apple-system, BlinkMacSystemFont, "Segoe UI", 'Raleway', 'Noto Sans KR', "Comfortaa", 'Rajdhani', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, "Malgun Gothic";
     -webkit-font-smoothing: antialiased; }
   a { color: #666; }
-  #leftsidebar { max-width: 160px; }
+  #leftsidebar { max-width: 170px; }
   .sidebar .menu .list { margin: 0px; }
-  ul.list li:last-child { margin: 0 -10px; }
+  ul.list li { padding-left: 10px; }
+  /* ul.list li:last-child { margin: 0 -10px; } */
   section.content { margin-left: 170px;margin-right: 10px; }
   .media-wrapper-parent { padding-right: 10px;padding-left: 10px; }
   .media-wrapper .col { min-width: 120px;padding-right: 3px;padding-left: 3px; }
