--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     font-family: "Nexon Gothic R", apple-system, BlinkMacSystemFont, "Segoe UI", 'Raleway', 'Noto Sans KR', "Comfortaa", 'Rajdhani', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, "Malgun Gothic";
     -webkit-font-smoothing: antialiased; }
   a { color: #666; }
-  #leftsidebar { max-width: 170px; }
+  #leftsidebar { max-width: 170px;top: 33px; }
   .sidebar .menu .list { margin: 0px; }
   ul.list li { padding-left: 10px; }
   section.content { margin: 10px 10px 10px 180px; }
   .media-wrapper-parent { padding-right: 10px;padding-left: 10px; }
   .media-wrapper .col { min-width: 120px;padding-right: 3px;padding-left: 3px; }
-  .media-wrapper .col .card.w_data_1 { margin-bottom: 6px;box-shadow: 1px 1px 4px #aaaaaa; }
+  .media-wrapper .col .card.w_data_1 { margin-bottom: 6px;border: 1px solid #ddd; } /* box-shadow: 1px 1px 4px #aaaaaa; */
   .media-wrapper .col .card .body { padding: 0 13px;min-height: 66px; }
   .media-wrapper .col .card .body > div { height: 46px;background-position-y: center;
     background-position-x: center;background-repeat: no-repeat;margin: 0 -13px;
@@ -46,31 +46,39 @@
   table.articles td, table.socials td { padding: .25rem .75rem; }
   .footer-copy { font-size: 12px; }
   .row h3 { margin-top: 10px; }
+  .right-content .row { margin-right: -30px;margin-left: 10px; }
   .footer { background-color: #888;border-radius: 6px; }
-
+  .card { margin-bottom: 10px; }
+  .ticker-area { padding: 0; }
 </style>
 
-<script type="text/javascript" async defer>
-//<![CDATA[
-  var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
-  document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
-//]]>
-</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="//www.googletagmanager.com/gtag/js?id=UA-46283958-4"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async defer src="//widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
+<!--<script async defer src="//widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>-->
+<script async defer src="//widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
+
+<!--<script type="text/javascript" async defer>-->
+<!--//<![CDATA[-->
+  <!--var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");-->
+  <!--document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));-->
+<!--//]]>-->
+<!--</script>-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-46283958-4');
 </script>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-7663265873201714",
     enable_page_level_ads: true
   });
 </script>
+
 </head>
 
 <body class="theme-blush">
