--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   #leftsidebar { max-width: 170px;top: 33px; }
   .sidebar .menu .list { margin: 0px; }
   ul.list li { padding-left: 10px; }
-  section.content { margin: 10px 10px 10px 180px; }
+  section.content { margin: 10px 0 0 180px; }
   .media-wrapper-parent { padding-right: 10px;padding-left: 10px; }
   .media-wrapper .col { min-width: 120px;padding-right: 3px;padding-left: 3px; }
   .media-wrapper .col .card.w_data_1 { margin-bottom: 6px;border: 1px solid #ddd; } /* box-shadow: 1px 1px 4px #aaaaaa; */
