--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
+<meta name="description" content="The gateway to information of Blockchain industry">
 <meta name="google-site-verification" content="NeNpfpRApqGVCOlwSA8khQjvOss9XUtk64emALftQRE" />
 <title>4th Life</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
 <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
 <link rel="stylesheet" href="assets/plugins/charts-c3/plugin.css"/>
-
 <link rel="stylesheet" href="assets/plugins/morrisjs/morris.min.css" />
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/style.min.css">
@@ -20,6 +19,7 @@
     font-family: "Nexon Gothic R", apple-system, BlinkMacSystemFont, "Segoe UI", 'Raleway', 'Noto Sans KR', "Comfortaa", 'Rajdhani', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif, "Malgun Gothic";
     -webkit-font-smoothing: antialiased; }
   a { color: #666; }
+  a:hover, a:focus { color: inherit; }
   .contents-wrapper { max-width: 1440px;margin: 0 auto; }
   #leftsidebar { max-width: 170px;top: 33px; }
   .sidebar .menu .list { margin: 0px; }
@@ -44,22 +44,32 @@
     color: #aaa;padding: 10px 10px; }
   #bottomnavbar .cert-logos img { float: right; }
   .nav-tabs>.nav-item>.nav-link, .nav-tabs>.nav-item>.nav-link i.zmdi { font-size: 20px; }
-  table.articles th, table.socials { border-top: 0; }
+  .table { border: 1px solid rgba(0, 0, 0, 0.2); }
   table.articles td, table.socials td { padding: .25rem .75rem; }
   .footer-copy { font-size: 17px; }
-  .row h3 { margin-top: 10px; }
+  .row h3 { margin: 10px;border-bottom: 3px solid #1565c0; }
   .footer { background-color: #e47297;border-radius: 6px;margin-top: 10px;padding: 12px; }
   .footer p { margin-bottom: 0; }
   .card { margin-bottom: 10px; }
   .ticker-area { padding: 0; }
-  .carousel .carousel-inner {
-    box-shadow: none;border: 1px solid #ddd; }
+  .carousel .carousel-inner { box-shadow: none;border: 1px solid #ddd;
+    background-color: black; }
   .img-thumbnail { padding: 0; border-radius: 0; }
   .btn, .navbar .navbar-nav>a.btn { font-weight: bold;font-size: 1.25rem; }
   .nav-tabs>.nav-item>.nav-link, .nav-tabs>.nav-item>.nav-link i.zmdi { font-size: 22px; }
   .btn-success { background-color: #03cf5d; }
   .btn-danger { background-color: #e63740; }
   .theme-blush .nav-tabs .nav-link.active { border: 3px solid #e47297; }
+  .title-latest > a > span.badge { font-size: 0.7em;float: right;padding: 0.4em;
+    height: 1.4em;margin: 6px 0; }
+  .sns-wrapper a > img { margin-top: 2px;vertical-align: top; }
+
+  @media screen and (max-width: 600px) {
+    .media-first-row { margin-top: 10px; }
+    .top-menu-col { padding: 0; }
+    .nav-tabs>.nav-item>.nav-link, .nav-tabs>.nav-item>.nav-link i.zmdi { font-size: 19px;padding: 0; }
+    .navbar-brand a { margin-left: inherit;width: 140px; }
+  }
 </style>
 
 <script async src="//www.googletagmanager.com/gtag/js?id=UA-46283958-4"></script>
