--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css"/>
 <link rel="stylesheet" href="assets/plugins/charts-c3/plugin.css"/>
 <link rel="stylesheet" href="assets/plugins/morrisjs/morris.min.css" />
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.6/dist/css/bootstrap-select.min.css">
 <!-- Custom Css -->
 <link rel="stylesheet" href="assets/css/style.min.css">
 <style>
@@ -115,6 +117,8 @@
 
 <script src="assets/bundles/mainscripts.bundle.js"></script>
 <script src="assets/js/pages/index.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.6/dist/js/bootstrap-select.min.js"></script>
 
 </body>
 </html>
